--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -21,11 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "print((hash('your first name') % 3) + 1)"
+    "print((hash('David') % 3) + 1)"
    ]
   },
   {
@@ -149,7 +157,7 @@
     "  \n",
     "  ## Examples\n",
     "\n",
-    "  ### Example 1\n",
+    "  ### Example 1 \n",
     "\n",
     "  Input: `lst = [0, 2]`\n",
     "\n",
@@ -198,7 +206,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "\"\"\"\n",
+    "I have been given the root node of a binary tree. \n",
+    "I need to write a function that finds all possible paths from the root node to each of the leaf nodes. \n",
+    "A leaf node is the end point of a path because it has no children. \n",
+    "Each path will be represented as a list of node values. \n",
+    "The function will return a list of all these paths in any order.  \n",
+    "\"\"\""
    ]
   },
   {
@@ -212,9 +228,64 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 3, 1], [5, 3, 4], [5, 8, 7], [5, 8, 9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "#Example #1 \n",
+    "values3 = [5, 3, 8, 1, 4, 7, 9]\n",
+    "root3 = build_tree(values3)\n",
+    "print(root_to_leaf_paths(root3))  # Output: [[5, 3, 1], [5, 3, 4], [5, 8, 7], [5, 8, 9]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        5\n",
+    "       / \\\n",
+    "      3   8\n",
+    "     / \\  / \\\n",
+    "    1  4 7  9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 1, 4], [2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example #2\n",
+    "values4 = [2, 1, 3, None, 4]\n",
+    "root4 = build_tree(values4)\n",
+    "print(root_to_leaf_paths(root4))  # Output: [[2, 1, 4], [2, 3]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        2\n",
+    "       / \\\n",
+    "      1   3\n",
+    "       \\\n",
+    "        4"
    ]
   },
   {
@@ -229,9 +300,75 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [1, 2, 5], [1, 2, 6], [1, 2, 7]]\n",
+      "[[10, 9, 8], [10, 7]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "class TreeNode: # Define the TreeNode class to represent each node in the binary tree \n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "def root_to_leaf_paths(root):\n",
+    "    def dfs(node, path, result): # Used depth first search to traverse the tree \n",
+    "        if not node:\n",
+    "            return\n",
+    "        # Add the current node's value to the path\n",
+    "        path.append(node.val)\n",
+    "        # If it's a leaf node, add the path to the result\n",
+    "        if not node.left and not node.right:\n",
+    "            result.append(list(path))\n",
+    "        else:\n",
+    "            # Recur for left and right children\n",
+    "            dfs(node.left, path, result)\n",
+    "            dfs(node.right, path, result)\n",
+    "        # Backtrack to explore other paths\n",
+    "        path.pop()\n",
+    "\n",
+    "    result = []\n",
+    "    dfs(root, [], result)\n",
+    "    return result\n",
+    "\n",
+    "# Helper function to build a tree from a list\n",
+    "from collections import deque\n",
+    "\n",
+    "def build_tree(values):\n",
+    "    if not values:\n",
+    "        return None\n",
+    "    root = TreeNode(values[0])\n",
+    "    queue = deque([root])\n",
+    "    index = 1\n",
+    "    while queue and index < len(values):\n",
+    "        node = queue.popleft()\n",
+    "        if values[index] is not None:\n",
+    "            node.left = TreeNode(values[index])\n",
+    "            queue.append(node.left)\n",
+    "        index += 1\n",
+    "        if index < len(values) and values[index] is not None:\n",
+    "            node.right = TreeNode(values[index])\n",
+    "            queue.append(node.right)\n",
+    "        index += 1\n",
+    "    return root\n",
+    "\n",
+    "# Example 1\n",
+    "values1 = [1, 2, 2, 3, 5, 6, 7]\n",
+    "root1 = build_tree(values1)\n",
+    "print(root_to_leaf_paths(root1))  # Output: [[1, 2, 3], [1, 2, 5], [1, 2, 6], [1, 2, 7]]\n",
+    "\n",
+    "# Example 2\n",
+    "values2 = [10, 9, 7, 8]\n",
+    "root2 = build_tree(values2)\n",
+    "print(root_to_leaf_paths(root2))  # Output: [[10, 7], [10, 9, 8]]\n"
    ]
   },
   {
@@ -248,7 +385,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "\"\"\"\n",
+    "The solution uses Depth First Search (DFS) to explore all possible paths from the root to each leaf node.\n",
+    "It recursively traverses left and right subtrees and keeps track of the current path using a list. \n",
+    "When a leaf node is reached, a copy of the path is added to the result list.\n",
+    "This ensures that all paths from root to leaf nodes are captured.  \n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -265,7 +409,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\"\"\"\n",
+    "The time complexity is O(n) \n",
+    "- n is the number of nodes in the tree \n",
+    "\n",
+    "The space complexity is O(n)\n",
+    "- worst case due to the recursion stack \n",
+    "- storing the paths in the result \n",
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -283,6 +436,34 @@
    "outputs": [],
    "source": [
     "# Your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your answer here \n",
+    "\n",
+    "- **Alternative Approach**: Use **Breadth-First Search (BFS)** instead of Depth-First Search (DFS).\n",
+    "- **Data Structure**: Utilize a **queue** to keep track of nodes and their paths.\n",
+    "- **Initialization**:\n",
+    "  - Create a queue that stores **tuples**: each tuple contains a node and the path from the root to that node.\n",
+    "  - Enqueue the root node along with its path `[root.val]`.\n",
+    "- **Traversal**:\n",
+    "  - While the queue is not empty, **dequeue** a tuple containing the current node and its path.\n",
+    "  - If the node is a **leaf** (i.e., has no left or right children), add the path to the result list.\n",
+    "  - If the node has a **left child**, enqueue it along with the updated path.\n",
+    "  - If the node has a **right child**, enqueue it along with the updated path.\n",
+    "- **End Condition**: When the queue is empty, the result list contains all **root-to-leaf paths**.\n",
+    " \n",
+    "        2\n",
+    "       / \\\n",
+    "      1   3\n",
+    "       \\\n",
+    "        4\n",
+    "\n",
+    "Outputs:\n",
+    "[[2, 1, 4], [2, 3]]\n"
    ]
   },
   {
@@ -330,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
